fix: prevent footer misalignment by scoping paragraph styles

--- a/css/form.css
+++ b/css/form.css
@@ -16,11 +16,9 @@ html, body {
 color: #000000;
 font-family: 'Nunito', sans-serif;
 font-style: normal;
-max-width: 100%;
-overflow-x: hidden;
 }
 
-h1, p {
+h1, .text-center p {
 margin-top: 1em;
 text-align: center;
 }
